--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewBeerEntryActivity"></activity>
+        <activity
+            android:name=".NewBeerEntryActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
