--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.example.abvpricecalculator"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -20,15 +20,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
-    implementation 'com.afollestad.material-dialogs:core:3.0.0-beta2'
-    implementation 'com.afollestad.material-dialogs:input:3.0.0-beta2'
-    implementation 'com.afollestad.material-dialogs:bottomsheets:3.0.0-beta2'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation "com.afollestad.material-dialogs:core:$rootProject.materialDialogsVersion"
+    implementation "com.afollestad.material-dialogs:input:$rootProject.materialDialogsVersion"
+    implementation "com.afollestad.material-dialogs:bottomsheets:$rootProject.materialDialogsVersion"
     testImplementation 'junit:junit:4.13-beta-3'
-    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
     // Room components
