--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".NewBeerEntryActivity"
+            android:label="@string/add_new"
             android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert"></activity>
         <activity
             android:name=".MainActivity"
