--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -12,7 +13,7 @@
         <activity
             android:name=".NewBeerEntryActivity"
             android:label="@string/add_new"
-            android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert"></activity>
+            android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
