--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,7 +27,7 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '2.1.0'
-    archLifecycleVersion = '2.2.0-alpha02'
+    roomVersion = '2.2.5'
+    archLifecycleVersion = '2.2.0'
     materialDialogsVersion = '3.0.0-beta2'
 }
